Work with CSS admin styling

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">ENJOY</div>
-        <div id="adminName">Bara Abdullatif</div>
+        <div id="adminName"></div>
         <div id="logout"><i class="fas fa-sign-out-alt"></i></div>
     </header>
 
@@ -63,7 +63,7 @@
                         <div class="MainContainer">
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer less">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfLessProducts">41</div>
                                         <div class="totalText">Total Products less 10</div>
@@ -76,7 +76,7 @@
                             </div>
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer numOfPro">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfProducts">41</div>
                                         <div class="totalText">Total Products</div>
@@ -89,7 +89,7 @@
                             </div>
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer numOfCat">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfCategory">41</div>
                                         <div class="totalText">Total Category</div>
@@ -102,7 +102,7 @@
                             </div>
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer numOfOrdSh">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfOrderShipped">41</div>
                                         <div class="totalText">Total Order Shipped</div>
@@ -115,7 +115,7 @@
                             </div>
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer numOfOrdPen">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfOrderPending">41</div>
                                         <div class="totalText">Total Order Pending</div>
@@ -129,7 +129,7 @@
 
 
                             <div class="iconsContainer">
-                                <div class="rowContainer">
+                                <div class="rowContainer numOfUseer">
                                     <div class="informationContainer">
                                         <div class="numberOf" id="numberOfUserWantAdmin">41</div>
                                         <div class="totalText">Total User want Admin</div>
