--- a/admin.html
+++ b/admin.html
@@ -306,7 +306,7 @@
 
 
                     <div class="bdcMangeAdminAdd bdc">
-                        <div class="addText">Manege Admin</div>
+                        <div class="addText">Manage Admin</div>
                         <div class="columnContainer">
                             <div class="columnMain">
                                 <div class="columnMainText UserID">UserID</div>
