--- a/admin.html
+++ b/admin.html
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="editProductContainer">
-                            <div style="font-size: 18px;">Update UnitInStock</div>
+                            <div class="updateLabel">Update UnitInStock</div>
                             <input type="text" name="UnitInStockText" value="" class="editProductText">
                         </div>
                     </div>
