--- a/signupUser.html
+++ b/signupUser.html
@@ -8,6 +8,7 @@
     <title>Sign up</title>
     <link rel="stylesheet" href="./CSS/signupStyling.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
     <script defer type="module" src="./JS/signupJS.js"></script>
 
@@ -38,9 +39,10 @@
 
                 <label for="firstname" class="userPwdlabel">Password</label>
                 <input type="text" value="" class="userPwdInput" name="userPwdInput" id="userPwdInput"> <br>
-
-                <input type="radio" name="role" value="Customer" id="role"> Customer
-                <input type="radio" name="role" value="admin" id="role">Admin <br>
+                <form id="my_radio_box">
+                    <input type="radio" name="role" value="Customer" /> Customer
+                    <input type="radio" name="role" value="Admin" /> Admin
+                </form>
                 <input type="submit" value="Submit" name="Submit" id="signUpSubmit" />
 
             </div>
