--- a/Cart.html
+++ b/Cart.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cart</title>
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer type="module" src="./JS/cartJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
     <link rel="stylesheet" href="./CSS/cartStyling.css">
