--- a/start.html
+++ b/start.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/startStyling.css">
     <script defer type="module" src="./JS/mainJS.js"></script>
     <script defer type="module" src="./JS/startJS.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
 </head>
 
